--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -2151,8 +2151,8 @@ N_ind <- 20
 
 dat <- list(
     habitatuse = rbinom(N_ind*2,size=10,prob=5/10), #20 individuals * 2 observations/individual, 10 max habitats; on average, individuals will use 5 of the 10 habitats more than 5% of the time
-    tid = c(rep(1,N_ind),rep(2,N_ind)), #1 refers to before and 2 to after
-    actor = rep(1:N_ind,2) #go through all individuals twice because there are observations from before and after for each
+    before = c(rep(1,N_ind),rep(2,N_ind)), #1 refers to before and 2 to after
+    ind = rep(1:N_ind,2) #go through all individuals twice because there are observations from before and after for each
 )
 
 
@@ -2168,7 +2168,7 @@ d[d$habitats=="Natural",]$habitats <- d[d$habitats=="Natural",]$habitats+2
 dat <- list(
     habitatuse = d$habitats,
     before = d$BeforeOrAfterManipulation,
-    ind = d$ID
+    ind = as.integer(as.factor(d$ID))
 )
 
 # THE MODEL (p.447 for binomial distribution with advanced varying slopes - McElreath 2020). 
@@ -2182,7 +2182,7 @@ mj <- ulam(
         # fixed priors
         g[before] ~ normal(0,1),
         vector[2]:sigma_ind ~ dexp(1),
-        cholesky_find_corr[2]:L_Rho_ind ~ lkj_corr_cholesky( 2 ),
+        cholesky_factor_corr[2]:L_Rho_ind ~ lkj_corr_cholesky( 2 ),
         # compute ordinary correlation matrixes from Cholesky finds
         gq> matrix[2,2]:Rho_ind <<- Chol_to_Corr(L_Rho_ind)
     ) , data=dat , chains=4 , cores=4 , log_lik=TRUE , cmdstan = TRUE, control = list(adapt_delta = .95, force_recompile = TRUE))
