--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -1,33 +1,36 @@
 ---
-title: How to succeed in human modified environments
-author: 
+title: "How to succeed in human modified environments"
+author:
 - '[Logan CJ](http://CorinaLogan.com)^1,2^'
 - '[Shaw R](https://thinkingbehaviour.org)^3^'
 - '[Lukas D](https://dieterlukas.mystrikingly.com)^1^'
 - '[McCune KB](https://www.kelseymccune.com/)^1,2^'
-date: '`r Sys.Date()`'
-always_allow_html: yes
+date: "`r Sys.Date()`"
 output:
-  html_document: 
+  word_document:
     toc: true
-    toc_depth: 5
-    toc_float: 
-      collapsed: false
-    code_folding: hide
-  md_document: 
+    toc_depth: '5'
+  md_document:
     toc: true
   pdf_document:
-    keep_tex: yes
+    keep_tex: true
     latex_engine: xelatex
-  github_document: 
+  github_document:
     toc: true
+  html_document:
+    toc: true
+    toc_depth: 5
+    toc_float:
+      collapsed: false
+    code_folding: hide
+always_allow_html: true
 bibliography: mi.bib
-csl: https://raw.githubusercontent.com/citation-style-language/styles/master/apa.csl
+csl: "https://raw.githubusercontent.com/citation-style-language/styles/master/apa.csl"
 urlcolor: blue
 header-includes:
-  - \usepackage[left]{lineno}
-  - \linenumbers
-  - \usepackage{fancyhdr}
+- \usepackage[left]{lineno}
+- \linenumbers
+- \usepackage{fancyhdr}
 ---
 
 \addtolength{\headheight}{0.1cm}
