--- a/Files/rrs/mi1jays.Rmd
+++ b/Files/rrs/mi1jays.Rmd
@@ -1,8 +1,8 @@
 ---
 title: How to succeed in human modified environments
 author: 
-- '[McCune KB](https://www.kelseymccune.com/)^1^'
-- '[Barve, S](http://www.sahasbarve.com/)^2^'
+- '[McCune KB](https://www.kelseymccune.com/)^1,2^'
+- '[Barve, S](http://www.sahasbarve.com/)^3^'
 date: '`r Sys.Date()`'
 always_allow_html: yes
 output:
@@ -42,17 +42,21 @@ Open...  ![](logoOpenAccess.png){width=5%} access ![](logoOpenCode.png){width=5%
 
 &nbsp;
 
-**Affiliations:** 1) College of Forestry, Wildlife and Environment, Auburn University, USA; 2) Archbold Biological Station, USA. Corresponding author: kelseybmccune@gmail.com
+##### Affiliations: 
+1) Institute for Social, Behavioral and Economic Research, University of California Santa Barbara, Santa Barbara, CA, USA
+2) College of Forestry, Wildlife and Environment, Auburn University, Auburn, AL, USA 
+3) Archbold Biological Station, Venus, FL, USA. 
+
+*Corresponding author: kelseybmccune@gmail.com*
 
 &nbsp;
 
-**This registered report has been pre-study peer reviewed and received an In Principle Acceptance on 8 Sep 2022 by:**
+**This is a post-study manuscript of the registered report that has been pre-study peer reviewed and received an In Principle Acceptance on 8 Sep 2022 by:**
 
 Chris Chambers (2022) The role of behavioural flexibility in promoting resilience to human environmental impacts. *Peer Community in Registered Reports*. [https://rr.peercommunityin.org/articles/rec?id=200](https://rr.peercommunityin.org/articles/rec?id=200). Reviewers:  Gloriana Chaverri, Vedrana Šlipogor, and Alizée Vernouillet
 
 ![](logoPCIRR.png){width=50%}
 
-<!-- **Cite as:** Logan CJ, Shaw R,  Lukas D, McCune KB. 2022. **[How to succeed in human modified environments](http://corinalogan.com/ManyIndividuals/mi1.html)** (http://corinalogan.com/ManyIndividuals/mi1.html) In principle acceptance by *PCI Registered Reports* of the version on 25 Aug 2022 [https://github.com/ManyIndividuals/ManyIndividuals/blob/573b4b5802550f47f246fb8b71c8efc4f853445c/Files/rrs/mi1.Rmd](https://github.com/ManyIndividuals/ManyIndividuals/blob/573b4b5802550f47f246fb8b71c8efc4f853445c/Files/rrs/mi1.Rmd). -->
 
 *See the reproducible manuscript ([Rmd](https://github.com/ManyIndividuals/ManyIndividuals/blob/573b4b5802550f47f246fb8b71c8efc4f853445c/Files/rrs/mi1.Rmd)) version for the code*
 
